--- a/TAQUERIAS MEXICO.ipynb
+++ b/TAQUERIAS MEXICO.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 197,
    "id": "0e39c3d9-8d91-41af-93fb-b7ef217adf2c",
    "metadata": {},
    "outputs": [],
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 199,
    "id": "7cf1b2cc-adf5-4f89-bb13-80ed5bdf2372",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Se leen los datos en formato CSV\n",
-    "bd_taquerias_empleo = pd.read_csv(r\"C:\\Users\\ricky\\OneDrive\\Escritorio\\PROGRAMMING PROJECTS\\TAQUERIAS EN MEXICO\\Evolucion-poblacion-ocupada-trabajadores-totales.csv\")\n",
-    "bd_taquerias_informalidad = pd.read_csv(r\"C:\\Users\\ricky\\OneDrive\\Escritorio\\PROGRAMMING PROJECTS\\TAQUERIAS EN MEXICO\\Evolucion-de-la-informalidad-laboral-de-Taqueros-y-Preparadores-de-Comida-Rapida-Antojitos-Pizzas-Hot-Dogs-Jugos-Cafe-Etcetera-comparado-con-la-situacion-nacional.csv\")"
+    "bd_taquerias_empleo = pd.read_csv(r\"C:\\Users\\ricky\\OneDrive\\Escritorio\\PROGRAMMING PROJECTS\\TAQUERIAS EN MEXICO\\BASES DE DATOS\\1. ¿Cómo ha evolucionado el salario promedio de los taqueros y preparadores de comida rápida en los últimos años\\Evolucion-poblacion-ocupada-trabajadores-totales.csv\")\n",
+    "bd_taquerias_informalidad = pd.read_csv(r\"C:\\Users\\ricky\\OneDrive\\ESCRIT~1\\PROGRA~1\\TAQUER~1\\BASESD~1\\2EE13~1.CUL\\EVOLUC~1.CSV\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 201,
    "id": "1b74a1fa-4797-4cce-8fbf-1311e13a52d9",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[240 rows x 10 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 204,
    "id": "ffc2cbf9-31e2-46e5-a43c-e685d3370e07",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 208,
    "id": "f064fcc4-5cca-44a8-8597-04defd1ea1f9",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
        "[96 rows x 10 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 210,
    "id": "8dfa841d-eff1-4ad5-849e-66268aa3c3b2",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 212,
    "id": "57fd696c-cb1a-4a34-b9d2-e05cf9f7077f",
    "metadata": {},
    "outputs": [
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 217,
    "id": "9a597d37-ffbd-4a19-a4fd-5a1529a2e72c",
    "metadata": {},
    "outputs": [],
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 219,
    "id": "73a9929e-45a1-4d55-a694-e26324e9ea31",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 221,
    "id": "5590f64c-7a81-4854-8c00-a9ee5377963c",
    "metadata": {},
    "outputs": [],
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 222,
    "id": "0701d76b-bfbf-48b2-8424-ca8682c02151",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1361,7 @@
        "31      6,538.79                 0.85                   2,998.83    3,539.95  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 223,
    "id": "959530a0-ebed-49f0-af5d-acfc222beedf",
    "metadata": {},
    "outputs": [],
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 224,
    "id": "6ee1ceda-7da6-4b31-81e2-d04cb0bc3d5b",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1712,7 @@
        "31  MULTIPOLYGON (((-87.53514 21.48570, -87.53516 ...  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 225,
    "id": "851f47e8-cb3e-434b-acb2-fd8141c12e1e",
    "metadata": {},
    "outputs": [
@@ -1737,7 +1737,7 @@
        "Text(0.5, 1.0, 'Estados de México por numero de trabajadores')"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1760,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 226,
    "id": "84be4d78-66e1-433e-a701-e5ed20996d52",
    "metadata": {},
    "outputs": [
@@ -1770,7 +1770,7 @@
        "Text(0.5, 1.0, 'Estados de México por numero de trabajadores')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 227,
    "id": "1e341919-5f08-4272-a04a-588c0c3a3751",
    "metadata": {},
    "outputs": [
@@ -1810,7 +1810,7 @@
        "Text(0.5, 1.0, 'Estados de México por promedio de Salario')"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 231,
    "id": "b6f79e52-63d4-4f0b-994a-c58b4d62b12c",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1843,7 @@
        "Text(0.5, 1.0, 'Estados de México por Promedio de Ingresos')"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 234,
    "id": "ef17bea6-801b-4300-877f-e9bd430d1101",
    "metadata": {},
    "outputs": [],
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 235,
    "id": "bb036b16-ea68-4ece-9e3e-418de32d2fab",
    "metadata": {},
    "outputs": [
@@ -2143,7 +2143,7 @@
        "12                 30            18576       67.59  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2154,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 236,
    "id": "dcb89d7d-c972-4f2d-b382-6f46cf239193",
    "metadata": {},
    "outputs": [
@@ -2164,7 +2164,7 @@
        "Text(0.5, 1.0, 'Distribución por Genero')"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2193,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 237,
    "id": "6f0a30d5-737d-4bfb-ad6c-c20547b6db16",
    "metadata": {},
    "outputs": [
@@ -2203,7 +2203,7 @@
        "(array([0, 1]), [Text(0, 0, 'Hombre'), Text(1, 0, 'Mujer')])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2247,14 +2247,6 @@
     "- HOMBRES : 6839.5 mxn/mes\n",
     "- MUJERES : 4947.5 mxn/mes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27a308f8-ff9d-4021-9d50-3a11ae968f89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
